--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Hello World in Backbone.js</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Hello World in Backbone.js</title>
 </head>
 <body>
 
+	
 	<script type="text/template" id="person_template">
-	  	<%= login %> , <%= password %> , <%= realName %> , <%= phoneNumber %> , <%= email %>
+		<%= login %> , <%= password %> , <%= realName %> , <%= phoneNumber %> , <%= email %>
 	</script>
+	
 
 	<script type="text/javascript" src="js/lib/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/lib/underscore.js"></script>
